[gd_scene load_steps=4 format=3 uid="uid://ku6hvdegx5ws"]

[ext_resource type="FontFile" uid="uid://dnom70gse18ib" path="res://assets/pixelated-times-new-roman.ttf" id="1_6gviu"]
[ext_resource type="Script" uid="uid://xpgrf05ddoph" path="res://scripts/settings.gd" id="1_d0siu"]
[ext_resource type="PackedScene" uid="uid://sk7urw8x5b6t" path="res://scenes/settings_tab_menu.tscn" id="3_sitx7"]

[node name="Settings" type="Control"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_d0siu")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -48

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("1_6gviu")
theme_override_font_sizes/font_size = 144
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsTabMenu" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_sitx7")]
layout_mode = 2
size_flags_vertical = 3

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("1_6gviu")
theme_override_font_sizes/font_size = 128
text = "Exit"

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="tree_exited" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_tree_exited"]
